[tool.poetry]
name = "facebook-groups-mass-pub"
version = "0.1.0"
description = ""
authors = ["Felipe Adeildo <contato@felipeadeildo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
chromedriver-autoinstaller = "^0.6.4"
webdriver-manager = "^4.0.2"
colorama = "^0.4.6"
rich = "^13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
